# debug-router

./: .gitattributes  .gitignore  .gn  .tools_shared  ACKNOWLEDGMENTS.md  BUILD.gn  CONTRIBUTING.md  DEBUG_ROUTER_VERSION  DEFAULT_REVIEWERS  DEPS  DebugRouter.podspec  Gemfile  NOTICE  README.md  config.gni  connection-tree-plan.md  usb_connection_complete_guide.md
.github/actions/common-deps/: action.yml
.github/workflows/: android-release.yml  ci.yml  harmony-release.yml  npm-manual-release.yml  publish-pod.yml  remote-debug-driver-publish-npm.yml
debug_router/Android/DebugRouter/: CMakeLists.txt  build.gradle  consumer-rules.pro  gradle.properties
debug_router/Android/DebugRouter/src/main/java/com/lynx/debugrouter/: ConnectionState.java  DebugRouter.java  DebugRouterGlobalHandler.java  DebugRouterSessionHandler.java  DebugRouterSlot.java  DebugRouterSlotDelegate.java  MonitorRunnable.java  NativeReportServiceDelegate.java  ReceiveTemplateByUsbHandler.kt  StateListener.java  Utils.java
debug_router/Android/DebugRouter/src/main/java/com/lynx/debugrouter/app/: MessageHandleResult.java  MessageHandler.java
debug_router/Android/DebugRouter/src/main/java/com/lynx/debugrouter/base/: MessageTransceiverStateListener.java
debug_router/Android/DebugRouter/src/main/java/com/lynx/debugrouter/base/net/: IDebugRouterWebSocketService.java
debug_router/Android/DebugRouter/src/main/java/com/lynx/debugrouter/base/report/: DebugRouterMetaInfo.kt  DebugRouterReportServiceUtil.java  IDebugRouterReportService.java
debug_router/Android/DebugRouter/src/main/java/com/lynx/debugrouter/base/service/: DebugRouterServiceCenter.java
debug_router/Android/DebugRouter/src/main/java/com/lynx/debugrouter/base/usb/: IUSBHijackService.java
debug_router/Android/DebugRouter/src/main/java/com/lynx/debugrouter/log/: ILogDelegate.java
debug_router/Common/: BUILD.gn  debug_router.cc  debug_router.h  debug_router_global_handler.h  debug_router_session_handler.h  debug_router_slot.cc  debug_router_slot.h  debug_router_slot_delegate.h  native_slot_delegate.h
debug_router/android/: README.md
debug_router/android/debug_router/: CMakeLists.txt  build.gradle  jacoco.gradle
debug_router/common/: BUILD.gn  debug_router.cc  debug_router.h  debug_router_export.h  debug_router_global_handler.h  debug_router_slot.cc  debug_router_slot.h  native_slot_delegate.h
debug_router/harmony/: .gitignore  BUILD.gn  build-profile.json5  hvigorfile.ts  oh-package.json5  parameter.json
debug_router/harmony/debug_router/: .gitignore  BUILD.gn  Index.ets  README.md  build-profile.json5  hvigorfile.ts  obfuscation-rules.txt  oh-package.json5
debug_router/harmony/debug_router/src/main/: module.json5
debug_router/harmony/debug_router/src/main/cpp/: entry.cc
debug_router/harmony/debug_router/src/main/ets/: DebugRouter.ets  DebugRouterSlot.ets  DebugRouterSlotDelegate.ets  Index.ets
debug_router/harmony/debug_router/src/main/ets/types/: oh-package.json5
debug_router/harmony/debug_router/src/main/ets/types/libdebugrouter/: index.d.ts  oh-package.json5
debug_router/harmony/entry/: .gitignore  oh-package.json5
debug_router/harmony/entry/src/main/ets/pages/: Index.ets
debug_router/harmony/hvigor/: hvigor-config.json5
debug_router/harmony/script/: build.py
debug_router/iOS/: DebugRouter.mm
debug_router/iOS/report/: DebugRouterReport.m
debug_router/ios/: DebugRouter.mm  DebugRouterInternalStateListener.m  DebugRouterLog.mm  DebugRouterMessageHandleResult.m  DebugRouterSlot.mm  README.md
debug_router/ios/net/: LocalNetworkPermissionChecker.m
debug_router/ios/public/: DebugRouter.h  DebugRouterGlobalHandler.h  DebugRouterSlot.h
debug_router/ios/report/: DebugRouterReport.m
debug_router/native/: BUILD.gn
debug_router/native/android/: DebugRouterSoLoad.cc  MessageAssembler_impl.cc  MessageAssembler_impl.h  debug_router_android.cc  debug_router_android.h  debug_router_global_handler_android.cc  debug_router_global_handler_android.h  debug_router_listener_android.cc  debug_router_listener_android.h  debug_router_report_android.cc  debug_router_report_android.h  debug_router_report_service_android.cc  debug_router_report_service_android.h  debug_router_session_handler_android.cc  debug_router_session_handler_android.h  message_handler_android.cc  message_handler_android.h  native_slot_android.cc  native_slot_android.h
debug_router/native/base/: socket_guard.h
debug_router/native/core/: debug_router_config.cc  debug_router_core.cc  debug_router_core.h  message_transceiver.cc  message_transceiver.h  util.cc  util.h
debug_router/native/harmony/: debug_router_global_handler_harmony.cc  debug_router_global_handler_harmony.h  debug_router_harmony.cc  debug_router_harmony.h  debug_router_log_harmony.cc  debug_router_log_harmony.h  debug_router_message_handler_harmony.cc  debug_router_message_handler_harmony.h  debug_router_session_handler_harmony.cc  debug_router_session_handler_harmony.h  debug_router_state_listener_harmony.cc  debug_router_state_listener_harmony.h  native_slot_harmony.cc  (+1 more)
debug_router/native/test/: BUILD.gn  count_down_latch_unittest.cc  debug_router_core_concurrency_unittest.cc  example_source.cc  example_source.h  example_source_unittest.cc  socket_util_unittest.cc
debug_router_connector/: .npmrc  .prettierignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
debug_router_connector/scripts/: build.sh
debug_router_connector/src/: index.ts
docs/: connection_trace.md
remote_debug_driver/: .gitignore  Notice.txt  README.md  package-lock.json  package.json  tsconfig.json
remote_debug_driver/scripts/: build.sh
remote_debug_driver/src/: index.ts
test/connect_test/: check_android_connection_ci.py
test/unit_test/: check_android_unittest.py  check_test_build.py  check_test_run.py  lynx_env.py  run_unittests.py
tools/: envsetup.sh
tools/android_tools/: android_env.sh  emu_bootup.sh
tools/build_jni/: README.md  jni_generator.py  jni_load.cc  prebuild.sh  prebuild_jni.sh  react_files  react_generator.py
tools/testing/: test.gni
(+241 files in other folders)
