# Copyright 2022 The Lynx Authors. All rights reserved.

if (is_android) {
  import("//build/config/android/config.gni")
}

if (target_cpu == "arm" || target_cpu == "arm64") {
  import("//build/config/arm.gni")
}

declare_args() {
  # The runtime mode ("debug", "profile", "release")
  runtime_mode = "debug"

  build_number = "1"
  build_version = "1.0.0"

  # Whether to enable unit tests
  enable_unittests = false
}
