# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("//build/config/harmony/config.gni")

group("harmony") {
  deps = [ "//debug_router/harmony/debug_router:debug_router_group" ]
}
