# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("//build/config/harmony/config.gni")

shared_library("debug_router_group") {
  output_name = "debugrouter"

  include_dirs = [
    ".",
    "../../../",
  ]

  # fml and napi related files
  sources = [ "src/main/cpp/entry.cc" ]

  deps = [
    "//debug_router/common:debug_router_cpp_interface",
    "//debug_router/native:debug_router_core",
  ]

  cflags = [
    "-Wno-sign-compare",
    "-Wno-unused-private-field",
    "-Wno-unused-variable",
    "-Wno-unused-result",
  ]
  cflags_cc = []

  libs = [
    "ace_napi.z",
    "hilog_ndk.z",
    "uv",
  ]
}
